Fix gap under instance screenshot

--- a/_styles/sectors.less
+++ b/_styles/sectors.less
@@ -35,7 +35,7 @@ section.your-own, section.arguments, section.pricing {
 
 @media screen and (max-width: 760px) {
     .your-own {
-        grid-template-rows: 1fr 1fr;
+        grid-template-rows: 1fr auto;
         grid-template-columns: 1fr;
     }
 }
